# simple-task-timer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml  run-tests.yml
src/: main.rs  persistence.rs  task.rs  task_model.rs  utils.rs
